# CSA-development

Лаб. 1/: client.cpp
Лаб. 2/: CMakeLists.txt  Dockerfile
Лаб. 2/src/: CMakeLists.txt  recv_send.h  server.cpp
Лаб. 3/: .gitignore  Dockerfile  docker-compose.yml  stop.sh
Лаб. 3/database/: init.sql
Лаб. 3/log/: log.txt
Лаб. 3/src/: CMakeLists.txt  ClientHandler.cpp  ClientHandler.h  main.cpp  test.cpp
Лаб. 3/src/AnimalManager/: AnimalManager.cpp  AnimalManager.h  CMakeLists.txt
Лаб. 3/src/Animals/Animal/: Animal.cpp  Animal.h  CMakeLists.txt
Лаб. 3/src/Animals/Cat/: CMakeLists.txt  Cat.cpp  Cat.h
Лаб. 3/src/Animals/Dog/: CMakeLists.txt  Dog.cpp  Dog.h
Лаб. 3/src/Animals/Fox/: CMakeLists.txt  Fox.cpp  Fox.h
Лаб. 3/src/BuildAnimal/: BuildAnimal.cpp  BuildAnimal.h  CMakeLists.txt
Лаб. 3/src/HTTPServer/: HTTPServer.cpp
Лаб. 3/src/Logger/: Logger.cpp  Logger.h
Лаб. 3/src/RequestHandlers/AddNewRequestHandler/: AddNewRequestHandler.cpp  AddNewRequestHandler.h  CMakeLists.txt
Лаб. 3/src/RequestHandlers/ChangeRequestHandler/: CMakeLists.txt  ChangeRequestHandler.cpp  ChangeRequestHandler.h
Лаб. 3/src/RequestHandlers/GetByIdRequestHandler/: CMakeLists.txt  GetByIdRequestHandler.cpp  GetByIdRequestHandler.h
Лаб. 3/src/RequestHandlers/GetByTypeRequestHandler/: CMakeLists.txt  GetByTypeRequestHandler.cpp  GetByTypeRequestHandler.h
Лаб. 3/src/RequestHandlers/PurchaseRequestHandler/: CMakeLists.txt  PurchaseRequestHandler.cpp  PurchaseRequestHandler.h
Лаб. 3/src/RequestHandlers/RequestHandlerBase/: CMakeLists.txt  RequestHandlerBase.cpp  RequestHandlerBase.h
Лаб. 3/src/RequestHandlers/ShowAllRequestHandler/: CMakeLists.txt  ShowAllRequestHandler.cpp  ShowAllRequestHandler.h
